added demo notification on deviceready

--- a/www/index.html
+++ b/www/index.html
@@ -414,7 +414,8 @@ $("#classlistpage").on("pagebeforeshow", function(e, data){
         });
 
 </script>
-
+<script type="text/javascript" src ="cordova.js"></script>
+<script type="text/javascript" src ="js/login-notification.js"></script>
 </body>
 
 </html>
