--- a/www/index.html
+++ b/www/index.html
@@ -377,6 +377,16 @@ $("#deadlineList").on("pagebeforeshow", function(e, data){
             db.transaction(populateDB, errorCB, successCB);
     
             db.transaction(getDeadlinesList, errorCB);
+            // $(function(){
+            //     var elems = $('#allList').children('li').remove();
+            //     elems.sort(function(a,b){
+            //         //alert(new Date(a.id) < new Date(b.id));
+            //         alert (new Date(a.id) > new Date(b.id));
+            //     });
+
+            //     $('#allList').append(elems);
+            // });
+            // $("#allList").listview().listview('refresh');
 });
 
 $("#DeadlineDetail").on("pagebeforeshow", function(e, data){
