--- a/www/index.html
+++ b/www/index.html
@@ -52,6 +52,7 @@ $(document).one('pagebeforecreate', function () {
     <!-- body -->
 	<div role="main" class="ui-content jqm-content" >
 		<div data-demo-html="true">
+
 			<div data-role="tabs" id="tabs">
             	<!-- tab bar -->
 				<div data-role="navbar">
@@ -62,7 +63,7 @@ $(document).one('pagebeforecreate', function () {
 					</ul>
 				</div>
                 <!-- tab bar -->
-                
+                <input type ="button" value = "Click" onclick = "window.plugin.notification.local.add({ message: 'deviceready' });">
                 <!-- tab content -->
 				<div id="all" class="ui-body-d ui-content">
 					<ul id="allList" data-role="listview" data-inset="true">
